--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4"
   }
 }
